objects/HS_Event_Day__c.object
<CustomObject>
    <fields>
        <fullName>Attendance_Limit__c</fullName>
        <label>Attendance Limit</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Boroughs_Invited__c</fullName>
        <label>Boroughs Invited</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Barking and Dagenham</fullName>
                </value>
                <value>
                    <fullName>Barnet</fullName>
                </value>
                <value>
                    <fullName>Bexley</fullName>
                </value>
                <value>
                    <fullName>Brent</fullName>
                </value>
                <value>
                    <fullName>Bromley</fullName>
                </value>
                <value>
                    <fullName>Camden</fullName>
                </value>
                <value>
                    <fullName>Croydon</fullName>
                </value>
                <value>
                    <fullName>Ealing</fullName>
                </value>
                <value>
                    <fullName>Enfield</fullName>
                </value>
                <value>
                    <fullName>Greenwich</fullName>
                </value>
                <value>
                    <fullName>Hackney</fullName>
                </value>
                <value>
                    <fullName>Hammersmith and Fulham</fullName>
                </value>
                <value>
                    <fullName>Haringey</fullName>
                </value>
                <value>
                    <fullName>Harrow</fullName>
                </value>
                <value>
                    <fullName>Havering</fullName>
                </value>
                <value>
                    <fullName>Hillingdon</fullName>
                </value>
                <value>
                    <fullName>Hounslow</fullName>
                </value>
                <value>
                    <fullName>Islington</fullName>
                </value>
                <value>
                    <fullName>Kensington and Chelsea</fullName>
                </value>
                <value>
                    <fullName>Kingston upon Thames</fullName>
                </value>
                <value>
                    <fullName>Lambeth</fullName>
                </value>
                <value>
                    <fullName>Lewisham</fullName>
                </value>
                <value>
                    <fullName>Merton</fullName>
                </value>
                <value>
                    <fullName>Newham</fullName>
                </value>
                <value>
                    <fullName>Redbridge</fullName>
                </value>
                <value>
                    <fullName>Richmond upon Thames</fullName>
                </value>
                <value>
                    <fullName>Southwark</fullName>
                </value>
                <value>
                    <fullName>Sutton</fullName>
                </value>
                <value>
                    <fullName>Tower Hamlets</fullName>
                </value>
                <value>
                    <fullName>Waltham Forest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corporate_Partners__c</fullName>
        <label>Corporate Partners</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Look</fullName>
                </value>
                <value>
                    <fullName>Starbucks</fullName>
                </value>
                <value>
                    <fullName>Lloyds</fullName>
                </value>
                <value>
                    <fullName>Berkeley Group</fullName>
                </value>
                <value>
                    <fullName>Zendesk</fullName>
                </value>
                <value>
                    <fullName>GLA</fullName>
                </value>
                <value>
                    <fullName>Bloomberg</fullName>
                </value>
                <value>
                    <fullName>No Corporate Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Attendance_Status_YP__c</fullName>
        <formula>if((( YPs_attending__c))&gt;=((Attendance_Limit__c)),&quot;Full&quot;,&quot;Places Available&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Attendance Status (YP)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Day_Date__c</fullName>
        <label>Event Day Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Day_Description__c</fullName>
        <label>Event Day Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Day_Location__c</fullName>
        <label>Event Day Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Day_Map__c</fullName>
        <inlineHelpText>Map link here</inlineHelpText>
        <label>Event Day Map</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Day_Summary__c</fullName>
        <label>Event Day Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Day_Time__c</fullName>
        <label>Event Day Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Day_Title__c</fullName>
        <inlineHelpText>This will be the name of the event day that will show up on the Website</inlineHelpText>
        <label>Event Day Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Day_Useful_Doc__c</fullName>
        <inlineHelpText>Link to useful doc here</inlineHelpText>
        <label>Event Day Useful Doc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <formula>HS_Event__r.HS_Event_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HS_Event__c</fullName>
        <label>HS Event</label>
        <referenceTo>HS_Event__c</referenceTo>
        <relationshipLabel>HS Event Days</relationshipLabel>
        <relationshipName>HS_Event_Days</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Invite_No_YP_Response__c</fullName>
        <inlineHelpText>YPs who have not responded to an invite</inlineHelpText>
        <label>Invite: No YP Response</label>
        <summaryFilterItems>
            <field>HS_YP_Attendance__c.YP_Attending_Event__c</field>
            <operation>equals</operation>
            <value>No Response</value>
        </summaryFilterItems>
        <summaryForeignKey>HS_YP_Attendance__c.HS_Event_Day__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Invite_YPs_Not_Attending__c</fullName>
        <inlineHelpText>YPs who respond that they are not attending to an invite</inlineHelpText>
        <label>Invite: YPs Not Attending</label>
        <summaryFilterItems>
            <field>HS_YP_Attendance__c.YP_Attending_Event__c</field>
            <operation>equals</operation>
            <value>No</value>
        </summaryFilterItems>
        <summaryForeignKey>HS_YP_Attendance__c.HS_Event_Day__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Publish_to_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish to Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>HS_Event__r.Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Looks into HS Event</inlineHelpText>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_members_attending__c</fullName>
        <label>Staff members attending</label>
        <summarizedField>HS_Partner_Attendance__c.Number_of_People_attending__c</summarizedField>
        <summaryForeignKey>HS_Partner_Attendance__c.Event_Day__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Stores_Attending__c</fullName>
        <label>Stores Attending</label>
        <summaryFilterItems>
            <field>HS_Partner_Attendance__c.Partner_Attending__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>HS_Partner_Attendance__c.Event_Day__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Subregion__c</fullName>
        <label>Subregion</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>London North West</fullName>
                </value>
                <value>
                    <fullName>London North East</fullName>
                </value>
                <value>
                    <fullName>London South West</fullName>
                </value>
                <value>
                    <fullName>London South East</fullName>
                </value>
                <value>
                    <fullName>London North</fullName>
                </value>
                <value>
                    <fullName>London South</fullName>
                </value>
                <value>
                    <fullName>London East</fullName>
                </value>
                <value>
                    <fullName>London West</fullName>
                </value>
                <value>
                    <fullName>London Central</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YPs_attending__c</fullName>
        <label>YPs attending</label>
        <summaryFilterItems>
            <field>HS_YP_Attendance__c.YP_Attending_Event__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>HS_YP_Attendance__c.HS_Event_Day__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>HS Event Day</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Corporate_Partners__c</columns>
        <columns>Publish_to_Website__c</columns>
        <columns>Boroughs_Invited__c</columns>
        <columns>Event_Day_Date__c</columns>
        <columns>Event_Day_Description__c</columns>
        <columns>Event_Day_Location__c</columns>
        <columns>Event_Day_Time__c</columns>
        <columns>HS_Event__c</columns>
        <columns>Staff_members_attending__c</columns>
        <columns>YPs_attending__c</columns>
        <columns>Subregion__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Published</fullName>
        <columns>NAME</columns>
        <columns>Corporate_Partners__c</columns>
        <columns>Event_Type__c</columns>
        <columns>Publish_to_Website__c</columns>
        <columns>Region__c</columns>
        <columns>YPs_attending__c</columns>
        <columns>Attendance_Limit__c</columns>
        <columns>Event_Day_Date__c</columns>
        <columns>Event_Day_Time__c</columns>
        <columns>HS_Event__c</columns>
        <columns>Subregion__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Publish_to_Website__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Published</label>
    </listViews>
    <listViews>
        <fullName>Attendance_ID_SB_09_03_16</fullName>
        <columns>NAME</columns>
        <columns>HS_Event__c</columns>
        <columns>Event_Day_Date__c</columns>
        <columns>YPs_attending__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Starbucks Interview Event 09/03/16</value>
        </filters>
        <label>Attendance - ID SB 09/03/16</label>
    </listViews>
    <listViews>
        <fullName>C1_16_Kick_Off_All</fullName>
        <columns>NAME</columns>
        <columns>Event_Day_Title__c</columns>
        <columns>HS_Event__c</columns>
        <columns>Event_Day_Date__c</columns>
        <columns>Event_Day_Location__c</columns>
        <columns>Event_Day_Description__c</columns>
        <columns>Event_Day_Map__c</columns>
        <columns>Event_Day_Summary__c</columns>
        <columns>Event_Day_Time__c</columns>
        <columns>Event_Day_Useful_Doc__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Day_Title__c</field>
            <operation>contains</operation>
            <value>Kick Off</value>
        </filters>
        <filters>
            <field>Event_Type__c</field>
            <operation>notContain</operation>
            <value>Ambassador</value>
        </filters>
        <label>C1:16 Kick Off - All</label>
        <sharedTo>
            <role>HeadStart_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HS2016_C1_Ambassador_London_Kick_Offs</fullName>
        <columns>Subregion__c</columns>
        <columns>NAME</columns>
        <columns>Event_Day_Title__c</columns>
        <columns>Event_Day_Date__c</columns>
        <columns>Event_Day_Time__c</columns>
        <columns>Publish_to_Website__c</columns>
        <columns>HS_Event__c</columns>
        <columns>Region__c</columns>
        <columns>Event_Day_Location__c</columns>
        <columns>Event_Day_Description__c</columns>
        <columns>Event_Day_Summary__c</columns>
        <columns>Event_Day_Map__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Day_Date__c</field>
            <operation>greaterThan</operation>
            <value>7/1/2016</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>London</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>KO</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Ambassador</value>
        </filters>
        <label>HS2016 - C1 Ambassador London Kick Offs</label>
        <sharedTo>
            <role>HeadStart_Assistant_Manager</role>
            <role>HeadStart_Associate</role>
            <role>HeadStart_Manager</role>
            <role>Headstart_Assistant_Programme_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Summer_Events_all_areas</fullName>
        <columns>NAME</columns>
        <columns>Event_Day_Title__c</columns>
        <columns>Event_Day_Date__c</columns>
        <columns>HS_Event__c</columns>
        <columns>Region__c</columns>
        <columns>Event_Day_Location__c</columns>
        <columns>Event_Day_Description__c</columns>
        <columns>Event_Day_Summary__c</columns>
        <columns>Event_Day_Map__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Day_Date__c</field>
            <operation>greaterThan</operation>
            <value>7/1/2016</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>London</value>
        </filters>
        <filters>
            <field>Publish_to_Website__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Summer Events, London</label>
        <sharedTo>
            <role>HeadStart_Assistant_Manager</role>
            <role>HeadStart_Associate</role>
            <role>HeadStart_Manager</role>
            <role>Headstart_Assistant_Programme_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Summer_Events_all_areas1</fullName>
        <columns>NAME</columns>
        <columns>Subregion__c</columns>
        <columns>Event_Day_Title__c</columns>
        <columns>Event_Day_Date__c</columns>
        <columns>Event_Day_Time__c</columns>
        <columns>Publish_to_Website__c</columns>
        <columns>HS_Event__c</columns>
        <columns>Region__c</columns>
        <columns>Event_Day_Location__c</columns>
        <columns>Event_Day_Description__c</columns>
        <columns>Event_Day_Summary__c</columns>
        <columns>Event_Day_Map__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Day_Date__c</field>
            <operation>greaterThan</operation>
            <value>7/1/2016</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>London</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Kick Off</value>
        </filters>
        <label>HS 2016 - C1 London Kick Off events</label>
        <sharedTo>
            <role>HeadStart_Assistant_Manager</role>
            <role>HeadStart_Associate</role>
            <role>HeadStart_Manager</role>
            <role>Headstart_Assistant_Programme_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2016_Cohort_1_Birmingham_Event_days</fullName>
        <columns>NAME</columns>
        <columns>Event_Day_Title__c</columns>
        <columns>Event_Day_Date__c</columns>
        <columns>Event_Day_Time__c</columns>
        <columns>Attendance_Limit__c</columns>
        <columns>Publish_to_Website__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>birmingham</value>
        </filters>
        <label>2016 Cohort 1 Birmingham Event days</label>
    </listViews>
    <listViews>
        <fullName>X2016_Cohort_1_Manchester_Event_days</fullName>
        <columns>NAME</columns>
        <columns>Event_Day_Title__c</columns>
        <columns>Event_Day_Date__c</columns>
        <columns>Event_Day_Time__c</columns>
        <columns>Attendance_Limit__c</columns>
        <columns>Publish_to_Website__c</columns>
        <columns>Event_Day_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>manchester</value>
        </filters>
        <label>2016 Cohort 1 Manchester Event days</label>
    </listViews>
    <nameField>
        <label>HS Event Day</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HS Event Days</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>